--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "hs-wack-a-mole",
   "version": "0.1.0",
+  "homepage": "https://sutigit.github.io/hs-wack-a-mole",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -20,6 +23,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "gh-pages": "^6.1.1",
     "typescript": "^5"
   }
 }
